// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`sku-webpack-plugin > build > should create valid app 1`] = `
===================================================================
--- sourceHtml
+++ clientHtml
@@ -1,24 +1,37 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
     <title>
       Webpack App
     </title>
     <meta
       name="viewport"
       content="width=device-width,initial-scale=1"
     >
     <script
       defer="defer"
       src="main.js"
     >
     </script>
     <link
       href="main.css"
       rel="stylesheet"
     >
   </head>
   <body>
+    <div>
+      <style type="text/css">
+        html,body{margin:0;padding:0;background:#fff}
+            html._1vgo8kg11,html._1vgo8kg11 body{color-scheme:dark;background:#1C2330}
+      </style>
+      <div class="xf3gbt0 _1405g9810 _1405g9813">
+        <div class="_16poewi0 _1vgo8kg8s _1vgo8kg7o _1vgo8kgb0 _1vgo8kg9w _1vgo8kg5g _1vgo8kg6c _1vgo8kgic _1vgo8kg4k _1vgo8kg4d _1405g9810 _1405g9813 _1vgo8kg34 _1vgo8kg37">
+          <span class="_16poewi0 _1vgo8kg50 _1405g980 _1405g981 _1405g981t _1405g98a e739tz4">
+            Is it working?
+          </span>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
\\ No newline at end of file
`;

exports[`sku-webpack-plugin > build > should generate the expected files 1`] = `
{
  "index.html": "<!doctype html><html><head><meta charset="utf-8"><title>Webpack App</title><meta name="viewport" content="width=device-width,initial-scale=1"><script defer="defer" src="main.js"></script><link href="main.css" rel="stylesheet"></head><body></body></html>",
  "main.css": ._16poewi0 {
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  -webkit-tap-highlight-color: transparent;
}
._16poewi1 {
  display: block;
}
._16poewi2 {
  line-height: 1;
}
._16poewi3 {
  list-style: none;
}
._16poewi4 {
  quotes: none;
}
._16poewi4:after,
._16poewi4:before {
  content: "";
}
._16poewi5 {
  border-collapse: collapse;
  border-spacing: 0;
}
._16poewi6 {
  -webkit-appearance: none;
  appearance: none;
}
._16poewi7 {
  background-color: transparent;
}
._16poewi8 {
  outline: var(--_1v1ql6o10) solid transparent;
  transition: outline-color 0.125s ease;
}
._16poewi8:focus-visible {
  outline-color: var(--_1v1ql6om);
}
._16poewia {
  color: inherit;
}
._16poewib:disabled {
  opacity: 1;
}
._16poewib::-ms-expand {
  display: none;
}
._16poewid[type="number"] {
  -moz-appearance: textfield;
}
._16poewid[type="number"]::-webkit-inner-spin-button,
._16poewid[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}
._16poewid::-ms-clear {
  display: none;
}
._16poewid::-webkit-search-cancel-button {
  -webkit-appearance: none;
}
._16poewig {
  color: inherit;
  text-decoration: none;
}
._1vgo8kg0 {
  overflow: hidden;
}
._1vgo8kg1 {
  overflow: scroll;
}
._1vgo8kg2 {
  overflow: visible;
}
._1vgo8kg3 {
  overflow: auto;
}
._1vgo8kg4 {
  -webkit-user-select: none;
  user-select: none;
}
._1vgo8kg5 {
  outline: none;
}
._1vgo8kg6 {
  outline: var(--_1v1ql6o10) solid transparent;
  transition: outline-color 0.125s ease;
}
._1vgo8kg6:focus-visible {
  outline-color: var(--_1v1ql6om);
}
._1vgo8kg7 {
  opacity: 0;
}
._1vgo8kg8 {
  z-index: 0;
}
._1vgo8kg9 {
  z-index: 1;
}
._1vgo8kga {
  z-index: 2;
}
._1vgo8kgb {
  z-index: 90;
}
._1vgo8kgc {
  z-index: 100;
}
._1vgo8kgd {
  z-index: 200;
}
._1vgo8kge {
  z-index: 290;
}
._1vgo8kgf {
  z-index: 300;
}
._1vgo8kgg {
  z-index: 400;
}
._1vgo8kgh {
  cursor: default;
}
._1vgo8kgi {
  cursor: pointer;
}
._1vgo8kgj {
  pointer-events: none;
}
._1vgo8kgk {
  top: 0;
}
._1vgo8kgl {
  bottom: 0;
}
._1vgo8kgm {
  left: 0;
}
._1vgo8kgn {
  right: 0;
}
._1vgo8kgo {
  height: 100%;
}
._1vgo8kgp {
  height: var(--_1v1ql6o9);
}
._1vgo8kgq {
  width: 100%;
}
._1vgo8kgr {
  width: var(--_1v1ql6o9);
}
._1vgo8kgs {
  min-width: 0;
}
._1vgo8kgt {
  max-width: var(--_1v1ql6o11);
}
._1vgo8kgu {
  max-width: var(--_1v1ql6o12);
}
._1vgo8kgv {
  max-width: var(--_1v1ql6o13);
}
._1vgo8kgw {
  max-width: var(--_1v1ql6o14);
}
._1vgo8kgx {
  max-width: -moz-fit-content;
  max-width: fit-content;
}
._1vgo8kgy {
  transition: var(--_1v1ql6o5i);
}
._1vgo8kgz {
  transition: var(--_1v1ql6o5j);
}
._1vgo8kg10:active {
  transform: var(--_1v1ql6o5k);
}
html._1vgo8kg11 ._1vgo8kg13,
html:not(._1vgo8kg11) ._1vgo8kg12 {
  background: var(--_1v1ql6o1t);
}
html._1vgo8kg11 ._1vgo8kg15,
html:not(._1vgo8kg11) ._1vgo8kg14 {
  background: var(--_1v1ql6o1u);
}
html._1vgo8kg11 ._1vgo8kg17,
html:not(._1vgo8kg11) ._1vgo8kg16 {
  background: var(--_1v1ql6o1v);
}
html._1vgo8kg11 ._1vgo8kg19,
html:not(._1vgo8kg11) ._1vgo8kg18 {
  background: var(--_1v1ql6o1w);
}
html._1vgo8kg11 ._1vgo8kg1b,
html:not(._1vgo8kg11) ._1vgo8kg1a {
  background: var(--_1v1ql6o1x);
}
html._1vgo8kg11 ._1vgo8kg1d,
html:not(._1vgo8kg11) ._1vgo8kg1c {
  background: var(--_1v1ql6o1y);
}
html._1vgo8kg11 ._1vgo8kg1f,
html:not(._1vgo8kg11) ._1vgo8kg1e {
  background: var(--_1v1ql6o1z);
}
html._1vgo8kg11 ._1vgo8kg1h,
html:not(._1vgo8kg11) ._1vgo8kg1g {
  background: var(--_1v1ql6o20);
}
html._1vgo8kg11 ._1vgo8kg1j,
html:not(._1vgo8kg11) ._1vgo8kg1i {
  background: var(--_1v1ql6o21);
}
html._1vgo8kg11 ._1vgo8kg1l,
html:not(._1vgo8kg11) ._1vgo8kg1k {
  background: var(--_1v1ql6o22);
}
html._1vgo8kg11 ._1vgo8kg1n,
html:not(._1vgo8kg11) ._1vgo8kg1m {
  background: var(--_1v1ql6o23);
}
html._1vgo8kg11 ._1vgo8kg1p,
html:not(._1vgo8kg11) ._1vgo8kg1o {
  background: var(--_1v1ql6o24);
}
html._1vgo8kg11 ._1vgo8kg1r,
html:not(._1vgo8kg11) ._1vgo8kg1q {
  background: var(--_1v1ql6o25);
}
html._1vgo8kg11 ._1vgo8kg1t,
html:not(._1vgo8kg11) ._1vgo8kg1s {
  background: var(--_1v1ql6o26);
}
html._1vgo8kg11 ._1vgo8kg1v,
html:not(._1vgo8kg11) ._1vgo8kg1u {
  background: var(--_1v1ql6o27);
}
html._1vgo8kg11 ._1vgo8kg1x,
html:not(._1vgo8kg11) ._1vgo8kg1w {
  background: var(--_1v1ql6o28);
}
html._1vgo8kg11 ._1vgo8kg1z,
html:not(._1vgo8kg11) ._1vgo8kg1y {
  background: var(--_1v1ql6o29);
}
html._1vgo8kg11 ._1vgo8kg21,
html:not(._1vgo8kg11) ._1vgo8kg20 {
  background: var(--_1v1ql6o2a);
}
html._1vgo8kg11 ._1vgo8kg23,
html:not(._1vgo8kg11) ._1vgo8kg22 {
  background: var(--_1v1ql6o2b);
}
html._1vgo8kg11 ._1vgo8kg25,
html:not(._1vgo8kg11) ._1vgo8kg24 {
  background: var(--_1v1ql6o2c);
}
html._1vgo8kg11 ._1vgo8kg27,
html:not(._1vgo8kg11) ._1vgo8kg26 {
  background: var(--_1v1ql6o2d);
}
html._1vgo8kg11 ._1vgo8kg29,
html:not(._1vgo8kg11) ._1vgo8kg28 {
  background: var(--_1v1ql6o2e);
}
html._1vgo8kg11 ._1vgo8kg2b,
html:not(._1vgo8kg11) ._1vgo8kg2a {
  background: var(--_1v1ql6o2f);
}
html._1vgo8kg11 ._1vgo8kg2d,
html:not(._1vgo8kg11) ._1vgo8kg2c {
  background: var(--_1v1ql6o2g);
}
html._1vgo8kg11 ._1vgo8kg2f,
html:not(._1vgo8kg11) ._1vgo8kg2e {
  background: var(--_1v1ql6o2h);
}
html._1vgo8kg11 ._1vgo8kg2h,
html:not(._1vgo8kg11) ._1vgo8kg2g {
  background: var(--_1v1ql6o2i);
}
html._1vgo8kg11 ._1vgo8kg2j,
html:not(._1vgo8kg11) ._1vgo8kg2i {
  background: var(--_1v1ql6o2j);
}
html._1vgo8kg11 ._1vgo8kg2l,
html:not(._1vgo8kg11) ._1vgo8kg2k {
  background: var(--_1v1ql6o2k);
}
html._1vgo8kg11 ._1vgo8kg2n,
html:not(._1vgo8kg11) ._1vgo8kg2m {
  background: var(--_1v1ql6o2l);
}
html._1vgo8kg11 ._1vgo8kg2p,
html:not(._1vgo8kg11) ._1vgo8kg2o {
  background: var(--_1v1ql6o2m);
}
html._1vgo8kg11 ._1vgo8kg2r,
html:not(._1vgo8kg11) ._1vgo8kg2q {
  background: var(--_1v1ql6o2n);
}
html._1vgo8kg11 ._1vgo8kg2t,
html:not(._1vgo8kg11) ._1vgo8kg2s {
  background: var(--_1v1ql6o2o);
}
html._1vgo8kg11 ._1vgo8kg2v,
html:not(._1vgo8kg11) ._1vgo8kg2u {
  background: var(--_1v1ql6o2p);
}
html._1vgo8kg11 ._1vgo8kg2x,
html:not(._1vgo8kg11) ._1vgo8kg2w {
  background: var(--_1v1ql6o2q);
}
html._1vgo8kg11 ._1vgo8kg2z,
html:not(._1vgo8kg11) ._1vgo8kg2y {
  background: var(--_1v1ql6o2r);
}
html._1vgo8kg11 ._1vgo8kg31,
html:not(._1vgo8kg11) ._1vgo8kg30 {
  background: var(--_1v1ql6o2s);
}
html._1vgo8kg11 ._1vgo8kg33,
html:not(._1vgo8kg11) ._1vgo8kg32 {
  background: var(--_1v1ql6o2t);
}
html._1vgo8kg11 ._1vgo8kg35,
html:not(._1vgo8kg11) ._1vgo8kg34 {
  background: var(--_1v1ql6o2u);
}
html._1vgo8kg11 ._1vgo8kg37,
html:not(._1vgo8kg11) ._1vgo8kg36 {
  background: var(--_1v1ql6o2v);
}
html._1vgo8kg11 ._1vgo8kg39,
html:not(._1vgo8kg11) ._1vgo8kg38 {
  box-shadow: var(--_1v1ql6o5l);
}
html._1vgo8kg11 ._1vgo8kg3b,
html:not(._1vgo8kg11) ._1vgo8kg3a {
  box-shadow: var(--_1v1ql6o5m);
}
html._1vgo8kg11 ._1vgo8kg3d,
html:not(._1vgo8kg11) ._1vgo8kg3c {
  box-shadow: var(--_1v1ql6o5n);
}
html._1vgo8kg11 ._1vgo8kg3f,
html:not(._1vgo8kg11) ._1vgo8kg3e {
  box-shadow: inset 0 0 0 var(--_1v1ql6oy) var(--_1v1ql6of);
}
html._1vgo8kg11 ._1vgo8kg3h,
html:not(._1vgo8kg11) ._1vgo8kg3g {
  box-shadow: inset 0 0 0 var(--_1v1ql6oy) var(--_1v1ql6og);
}
html._1vgo8kg11 ._1vgo8kg3j,
html:not(._1vgo8kg11) ._1vgo8kg3i {
  box-shadow: inset 0 0 0 var(--_1v1ql6oz) var(--_1v1ql6of);
}
html._1vgo8kg11 ._1vgo8kg3l,
html:not(._1vgo8kg11) ._1vgo8kg3k {
  box-shadow: inset 0 0 0 var(--_1v1ql6oz) var(--_1v1ql6og);
}
html._1vgo8kg11 ._1vgo8kg3n,
html:not(._1vgo8kg11) ._1vgo8kg3m {
  box-shadow: inset 0 0 0 var(--_1v1ql6oy) var(--_1v1ql6oh);
}
html._1vgo8kg11 ._1vgo8kg3p,
html:not(._1vgo8kg11) ._1vgo8kg3o {
  box-shadow: inset 0 0 0 var(--_1v1ql6oy) var(--_1v1ql6oi);
}
html._1vgo8kg11 ._1vgo8kg3r,
html:not(._1vgo8kg11) ._1vgo8kg3q {
  box-shadow: inset 0 0 0 var(--_1v1ql6oy) var(--_1v1ql6oj);
}
html._1vgo8kg11 ._1vgo8kg3t,
html:not(._1vgo8kg11) ._1vgo8kg3s {
  box-shadow: inset 0 0 0 var(--_1v1ql6oz) var(--_1v1ql6oj);
}
html._1vgo8kg11 ._1vgo8kg3v,
html:not(._1vgo8kg11) ._1vgo8kg3u {
  box-shadow: inset 0 0 0 var(--_1v1ql6oy) var(--_1v1ql6ok);
}
html._1vgo8kg11 ._1vgo8kg3x,
html:not(._1vgo8kg11) ._1vgo8kg3w {
  box-shadow: inset 0 0 0 var(--_1v1ql6oz) var(--_1v1ql6ok);
}
html._1vgo8kg11 ._1vgo8kg3z,
html:not(._1vgo8kg11) ._1vgo8kg3y {
  box-shadow: inset 0 0 0 var(--_1v1ql6oy) var(--_1v1ql6ol);
}
html._1vgo8kg11 ._1vgo8kg41,
html:not(._1vgo8kg11) ._1vgo8kg40 {
  box-shadow: inset 0 0 0 var(--_1v1ql6oy) var(--_1v1ql6on);
}
html._1vgo8kg11 ._1vgo8kg43,
html:not(._1vgo8kg11) ._1vgo8kg42 {
  box-shadow: inset 0 0 0 var(--_1v1ql6oz) var(--_1v1ql6on);
}
html._1vgo8kg11 ._1vgo8kg45,
html:not(._1vgo8kg11) ._1vgo8kg44 {
  box-shadow: inset 0 0 0 var(--_1v1ql6oy) var(--_1v1ql6oo);
}
html._1vgo8kg11 ._1vgo8kg47,
html:not(._1vgo8kg11) ._1vgo8kg46 {
  box-shadow: inset 0 0 0 var(--_1v1ql6oz) var(--_1v1ql6oo);
}
html._1vgo8kg11 ._1vgo8kg49,
html:not(._1vgo8kg11) ._1vgo8kg48 {
  box-shadow: inset 0 0 0 var(--_1v1ql6oy) var(--_1v1ql6op);
}
html._1vgo8kg11 ._1vgo8kg4b,
html:not(._1vgo8kg11) ._1vgo8kg4a {
  box-shadow: inset 0 0 0 var(--_1v1ql6oy) var(--_1v1ql6oq);
}
html._1vgo8kg11 ._1vgo8kg4d,
html:not(._1vgo8kg11) ._1vgo8kg4c {
  box-shadow: inset 0 0 0 var(--_1v1ql6oy) var(--_1v1ql6or);
}
html._1vgo8kg11 ._1vgo8kg4f,
html:not(._1vgo8kg11) ._1vgo8kg4e {
  box-shadow: inset 0 0 0 var(--_1v1ql6oz) var(--_1v1ql6or);
}
html._1vgo8kg11 ._1vgo8kg4h,
html:not(._1vgo8kg11) ._1vgo8kg4g {
  box-shadow: inset 0 0 0 var(--_1v1ql6oy) var(--_1v1ql6os);
}
html._1vgo8kg11 ._1vgo8kg4j,
html:not(._1vgo8kg11) ._1vgo8kg4i {
  box-shadow: inset 0 0 0 var(--_1v1ql6oz) var(--_1v1ql6os);
}
html._1vgo8kg11 ._1vgo8kg4l,
html:not(._1vgo8kg11) ._1vgo8kg4k {
  box-shadow: inset 0 0 0 var(--_1v1ql6oy) var(--_1v1ql6ot);
}
html._1vgo8kg11 ._1vgo8kg4n,
html:not(._1vgo8kg11) ._1vgo8kg4m {
  box-shadow: inset 0 0 0 var(--_1v1ql6oy) var(--_1v1ql6ou);
}
html._1vgo8kg11 ._1vgo8kg4p,
html:not(._1vgo8kg11) ._1vgo8kg4o {
  box-shadow: inset 0 0 0 var(--_1v1ql6oy) var(--_1v1ql6ov);
}
html._1vgo8kg11 ._1vgo8kg4r,
html:not(._1vgo8kg11) ._1vgo8kg4q {
  box-shadow: inset 0 0 0 var(--_1v1ql6oy) var(--_1v1ql6ow);
}
html._1vgo8kg11 ._1vgo8kg4t,
html:not(._1vgo8kg11) ._1vgo8kg4s {
  box-shadow: inset 0 0 0 var(--_1v1ql6oy) var(--_1v1ql6ox);
}
html._1vgo8kg11 ._1vgo8kg4v,
html:not(._1vgo8kg11) ._1vgo8kg4u {
  box-shadow: 0 0 0 var(--_1v1ql6o10) var(--_1v1ql6om);
}
._1vgo8kg4w {
  display: none;
}
._1vgo8kg50 {
  display: block;
}
._1vgo8kg54 {
  display: inline;
}
._1vgo8kg58 {
  display: inline-block;
}
._1vgo8kg5c {
  display: flex;
}
._1vgo8kg5g {
  position: relative;
}
._1vgo8kg5k {
  position: absolute;
}
._1vgo8kg5o {
  position: fixed;
}
._1vgo8kg5s {
  position: sticky;
}
._1vgo8kg5w {
  border-radius: 0;
}
._1vgo8kg60 {
  border-radius: 9999px;
}
._1vgo8kg64 {
  border-radius: var(--_1v1ql6ob);
}
._1vgo8kg68 {
  border-radius: var(--_1v1ql6oc);
}
._1vgo8kg6c {
  border-radius: var(--_1v1ql6od);
}
._1vgo8kg6g {
  border-radius: var(--_1v1ql6oe);
}
._1vgo8kg6k {
  gap: var(--_1v1ql6o0);
}
._1vgo8kg6o {
  gap: var(--_1v1ql6o1);
}
._1vgo8kg6s {
  gap: var(--_1v1ql6o2);
}
._1vgo8kg6w {
  gap: var(--_1v1ql6o3);
}
._1vgo8kg70 {
  gap: var(--_1v1ql6o4);
}
._1vgo8kg74 {
  gap: var(--_1v1ql6o5);
}
._1vgo8kg78 {
  gap: var(--_1v1ql6o6);
}
._1vgo8kg7c {
  gap: var(--_1v1ql6o7);
}
._1vgo8kg7g {
  gap: var(--_1v1ql6o8);
}
._1vgo8kg7k {
  gap: 0;
}
._1vgo8kg7o {
  padding-top: var(--_1v1ql6o0);
}
._1vgo8kg7s {
  padding-top: var(--_1v1ql6o1);
}
._1vgo8kg7w {
  padding-top: var(--_1v1ql6o2);
}
._1vgo8kg80 {
  padding-top: var(--_1v1ql6o3);
}
._1vgo8kg84 {
  padding-top: var(--_1v1ql6o4);
}
._1vgo8kg88 {
  padding-top: var(--_1v1ql6o5);
}
._1vgo8kg8c {
  padding-top: var(--_1v1ql6o6);
}
._1vgo8kg8g {
  padding-top: var(--_1v1ql6o7);
}
._1vgo8kg8k {
  padding-top: var(--_1v1ql6o8);
}
._1vgo8kg8o {
  padding-top: 0;
}
._1vgo8kg8s {
  padding-bottom: var(--_1v1ql6o0);
}
._1vgo8kg8w {
  padding-bottom: var(--_1v1ql6o1);
}
._1vgo8kg90 {
  padding-bottom: var(--_1v1ql6o2);
}
._1vgo8kg94 {
  padding-bottom: var(--_1v1ql6o3);
}
._1vgo8kg98 {
  padding-bottom: var(--_1v1ql6o4);
}
._1vgo8kg9c {
  padding-bottom: var(--_1v1ql6o5);
}
._1vgo8kg9g {
  padding-bottom: var(--_1v1ql6o6);
}
._1vgo8kg9k {
  padding-bottom: var(--_1v1ql6o7);
}
._1vgo8kg9o {
  padding-bottom: var(--_1v1ql6o8);
}
._1vgo8kg9s {
  padding-bottom: 0;
}
._1vgo8kg9w {
  padding-right: var(--_1v1ql6o0);
}
._1vgo8kga0 {
  padding-right: var(--_1v1ql6o1);
}
._1vgo8kga4 {
  padding-right: var(--_1v1ql6o2);
}
._1vgo8kga8 {
  padding-right: var(--_1v1ql6o3);
}
._1vgo8kgac {
  padding-right: var(--_1v1ql6o4);
}
._1vgo8kgag {
  padding-right: var(--_1v1ql6o5);
}
._1vgo8kgak {
  padding-right: var(--_1v1ql6o6);
}
._1vgo8kgao {
  padding-right: var(--_1v1ql6o7);
}
._1vgo8kgas {
  padding-right: var(--_1v1ql6o8);
}
._1vgo8kgaw {
  padding-right: 0;
}
._1vgo8kgb0 {
  padding-left: var(--_1v1ql6o0);
}
._1vgo8kgb4 {
  padding-left: var(--_1v1ql6o1);
}
._1vgo8kgb8 {
  padding-left: var(--_1v1ql6o2);
}
._1vgo8kgbc {
  padding-left: var(--_1v1ql6o3);
}
._1vgo8kgbg {
  padding-left: var(--_1v1ql6o4);
}
._1vgo8kgbk {
  padding-left: var(--_1v1ql6o5);
}
._1vgo8kgbo {
  padding-left: var(--_1v1ql6o6);
}
._1vgo8kgbs {
  padding-left: var(--_1v1ql6o7);
}
._1vgo8kgbw {
  padding-left: var(--_1v1ql6o8);
}
._1vgo8kgc0 {
  padding-left: 0;
}
._1vgo8kgc4 {
  margin-top: var(--_1v1ql6o0);
}
._1vgo8kgc8 {
  margin-top: var(--_1v1ql6o1);
}
._1vgo8kgcc {
  margin-top: var(--_1v1ql6o2);
}
._1vgo8kgcg {
  margin-top: var(--_1v1ql6o3);
}
._1vgo8kgck {
  margin-top: var(--_1v1ql6o4);
}
._1vgo8kgco {
  margin-top: var(--_1v1ql6o5);
}
._1vgo8kgcs {
  margin-top: var(--_1v1ql6o6);
}
._1vgo8kgcw {
  margin-top: var(--_1v1ql6o7);
}
._1vgo8kgd0 {
  margin-top: var(--_1v1ql6o8);
}
._1vgo8kgd4 {
  margin-top: 0;
}
._1vgo8kgd8 {
  margin-bottom: var(--_1v1ql6o0);
}
._1vgo8kgdc {
  margin-bottom: var(--_1v1ql6o1);
}
._1vgo8kgdg {
  margin-bottom: var(--_1v1ql6o2);
}
._1vgo8kgdk {
  margin-bottom: var(--_1v1ql6o3);
}
._1vgo8kgdo {
  margin-bottom: var(--_1v1ql6o4);
}
._1vgo8kgds {
  margin-bottom: var(--_1v1ql6o5);
}
._1vgo8kgdw {
  margin-bottom: var(--_1v1ql6o6);
}
._1vgo8kge0 {
  margin-bottom: var(--_1v1ql6o7);
}
._1vgo8kge4 {
  margin-bottom: var(--_1v1ql6o8);
}
._1vgo8kge8 {
  margin-bottom: 0;
}
._1vgo8kgec {
  margin-right: var(--_1v1ql6o0);
}
._1vgo8kgeg {
  margin-right: var(--_1v1ql6o1);
}
._1vgo8kgek {
  margin-right: var(--_1v1ql6o2);
}
._1vgo8kgeo {
  margin-right: var(--_1v1ql6o3);
}
._1vgo8kges {
  margin-right: var(--_1v1ql6o4);
}
._1vgo8kgew {
  margin-right: var(--_1v1ql6o5);
}
._1vgo8kgf0 {
  margin-right: var(--_1v1ql6o6);
}
._1vgo8kgf4 {
  margin-right: var(--_1v1ql6o7);
}
._1vgo8kgf8 {
  margin-right: var(--_1v1ql6o8);
}
._1vgo8kgfc {
  margin-right: 0;
}
._1vgo8kgfg {
  margin-left: var(--_1v1ql6o0);
}
._1vgo8kgfk {
  margin-left: var(--_1v1ql6o1);
}
._1vgo8kgfo {
  margin-left: var(--_1v1ql6o2);
}
._1vgo8kgfs {
  margin-left: var(--_1v1ql6o3);
}
._1vgo8kgfw {
  margin-left: var(--_1v1ql6o4);
}
._1vgo8kgg0 {
  margin-left: var(--_1v1ql6o5);
}
._1vgo8kgg4 {
  margin-left: var(--_1v1ql6o6);
}
._1vgo8kgg8 {
  margin-left: var(--_1v1ql6o7);
}
._1vgo8kggc {
  margin-left: var(--_1v1ql6o8);
}
._1vgo8kggg {
  margin-left: 0;
}
._1vgo8kggk {
  align-items: flex-start;
}
._1vgo8kggo {
  align-items: center;
}
._1vgo8kggs {
  align-items: flex-end;
}
._1vgo8kggw {
  justify-content: flex-start;
}
._1vgo8kgh0 {
  justify-content: center;
}
._1vgo8kgh4 {
  justify-content: flex-end;
}
._1vgo8kgh8 {
  justify-content: space-between;
}
._1vgo8kghc {
  flex-direction: row;
}
._1vgo8kghg {
  flex-direction: row-reverse;
}
._1vgo8kghk {
  flex-direction: column;
}
._1vgo8kgho {
  flex-direction: column-reverse;
}
._1vgo8kghs {
  flex-wrap: wrap;
}
._1vgo8kghw {
  flex-wrap: nowrap;
}
._1vgo8kgi0 {
  flex-shrink: 0;
}
._1vgo8kgi4 {
  flex-grow: 0;
}
._1vgo8kgi8 {
  flex-grow: 1;
}
._1vgo8kgic {
  text-align: left;
}
._1vgo8kgig {
  text-align: center;
}
._1vgo8kgik {
  text-align: right;
}
@media screen and (min-width: 740px) {
  ._1vgo8kg4x {
    display: none;
  }
  ._1vgo8kg51 {
    display: block;
  }
  ._1vgo8kg55 {
    display: inline;
  }
  ._1vgo8kg59 {
    display: inline-block;
  }
  ._1vgo8kg5d {
    display: flex;
  }
  ._1vgo8kg5h {
    position: relative;
  }
  ._1vgo8kg5l {
    position: absolute;
  }
  ._1vgo8kg5p {
    position: fixed;
  }
  ._1vgo8kg5t {
    position: sticky;
  }
  ._1vgo8kg5x {
    border-radius: 0;
  }
  ._1vgo8kg61 {
    border-radius: 9999px;
  }
  ._1vgo8kg65 {
    border-radius: var(--_1v1ql6ob);
  }
  ._1vgo8kg69 {
    border-radius: var(--_1v1ql6oc);
  }
  ._1vgo8kg6d {
    border-radius: var(--_1v1ql6od);
  }
  ._1vgo8kg6h {
    border-radius: var(--_1v1ql6oe);
  }
  ._1vgo8kg6l {
    gap: var(--_1v1ql6o0);
  }
  ._1vgo8kg6p {
    gap: var(--_1v1ql6o1);
  }
  ._1vgo8kg6t {
    gap: var(--_1v1ql6o2);
  }
  ._1vgo8kg6x {
    gap: var(--_1v1ql6o3);
  }
  ._1vgo8kg71 {
    gap: var(--_1v1ql6o4);
  }
  ._1vgo8kg75 {
    gap: var(--_1v1ql6o5);
  }
  ._1vgo8kg79 {
    gap: var(--_1v1ql6o6);
  }
  ._1vgo8kg7d {
    gap: var(--_1v1ql6o7);
  }
  ._1vgo8kg7h {
    gap: var(--_1v1ql6o8);
  }
  ._1vgo8kg7l {
    gap: 0;
  }
  ._1vgo8kg7p {
    padding-top: var(--_1v1ql6o0);
  }
  ._1vgo8kg7t {
    padding-top: var(--_1v1ql6o1);
  }
  ._1vgo8kg7x {
    padding-top: var(--_1v1ql6o2);
  }
  ._1vgo8kg81 {
    padding-top: var(--_1v1ql6o3);
  }
  ._1vgo8kg85 {
    padding-top: var(--_1v1ql6o4);
  }
  ._1vgo8kg89 {
    padding-top: var(--_1v1ql6o5);
  }
  ._1vgo8kg8d {
    padding-top: var(--_1v1ql6o6);
  }
  ._1vgo8kg8h {
    padding-top: var(--_1v1ql6o7);
  }
  ._1vgo8kg8l {
    padding-top: var(--_1v1ql6o8);
  }
  ._1vgo8kg8p {
    padding-top: 0;
  }
  ._1vgo8kg8t {
    padding-bottom: var(--_1v1ql6o0);
  }
  ._1vgo8kg8x {
    padding-bottom: var(--_1v1ql6o1);
  }
  ._1vgo8kg91 {
    padding-bottom: var(--_1v1ql6o2);
  }
  ._1vgo8kg95 {
    padding-bottom: var(--_1v1ql6o3);
  }
  ._1vgo8kg99 {
    padding-bottom: var(--_1v1ql6o4);
  }
  ._1vgo8kg9d {
    padding-bottom: var(--_1v1ql6o5);
  }
  ._1vgo8kg9h {
    padding-bottom: var(--_1v1ql6o6);
  }
  ._1vgo8kg9l {
    padding-bottom: var(--_1v1ql6o7);
  }
  ._1vgo8kg9p {
    padding-bottom: var(--_1v1ql6o8);
  }
  ._1vgo8kg9t {
    padding-bottom: 0;
  }
  ._1vgo8kg9x {
    padding-right: var(--_1v1ql6o0);
  }
  ._1vgo8kga1 {
    padding-right: var(--_1v1ql6o1);
  }
  ._1vgo8kga5 {
    padding-right: var(--_1v1ql6o2);
  }
  ._1vgo8kga9 {
    padding-right: var(--_1v1ql6o3);
  }
  ._1vgo8kgad {
    padding-right: var(--_1v1ql6o4);
  }
  ._1vgo8kgah {
    padding-right: var(--_1v1ql6o5);
  }
  ._1vgo8kgal {
    padding-right: var(--_1v1ql6o6);
  }
  ._1vgo8kgap {
    padding-right: var(--_1v1ql6o7);
  }
  ._1vgo8kgat {
    padding-right: var(--_1v1ql6o8);
  }
  ._1vgo8kgax {
    padding-right: 0;
  }
  ._1vgo8kgb1 {
    padding-left: var(--_1v1ql6o0);
  }
  ._1vgo8kgb5 {
    padding-left: var(--_1v1ql6o1);
  }
  ._1vgo8kgb9 {
    padding-left: var(--_1v1ql6o2);
  }
  ._1vgo8kgbd {
    padding-left: var(--_1v1ql6o3);
  }
  ._1vgo8kgbh {
    padding-left: var(--_1v1ql6o4);
  }
  ._1vgo8kgbl {
    padding-left: var(--_1v1ql6o5);
  }
  ._1vgo8kgbp {
    padding-left: var(--_1v1ql6o6);
  }
  ._1vgo8kgbt {
    padding-left: var(--_1v1ql6o7);
  }
  ._1vgo8kgbx {
    padding-left: var(--_1v1ql6o8);
  }
  ._1vgo8kgc1 {
    padding-left: 0;
  }
  ._1vgo8kgc5 {
    margin-top: var(--_1v1ql6o0);
  }
  ._1vgo8kgc9 {
    margin-top: var(--_1v1ql6o1);
  }
  ._1vgo8kgcd {
    margin-top: var(--_1v1ql6o2);
  }
  ._1vgo8kgch {
    margin-top: var(--_1v1ql6o3);
  }
  ._1vgo8kgcl {
    margin-top: var(--_1v1ql6o4);
  }
  ._1vgo8kgcp {
    margin-top: var(--_1v1ql6o5);
  }
  ._1vgo8kgct {
    margin-top: var(--_1v1ql6o6);
  }
  ._1vgo8kgcx {
    margin-top: var(--_1v1ql6o7);
  }
  ._1vgo8kgd1 {
    margin-top: var(--_1v1ql6o8);
  }
  ._1vgo8kgd5 {
    margin-top: 0;
  }
  ._1vgo8kgd9 {
    margin-bottom: var(--_1v1ql6o0);
  }
  ._1vgo8kgdd {
    margin-bottom: var(--_1v1ql6o1);
  }
  ._1vgo8kgdh {
    margin-bottom: var(--_1v1ql6o2);
  }
  ._1vgo8kgdl {
    margin-bottom: var(--_1v1ql6o3);
  }
  ._1vgo8kgdp {
    margin-bottom: var(--_1v1ql6o4);
  }
  ._1vgo8kgdt {
    margin-bottom: var(--_1v1ql6o5);
  }
  ._1vgo8kgdx {
    margin-bottom: var(--_1v1ql6o6);
  }
  ._1vgo8kge1 {
    margin-bottom: var(--_1v1ql6o7);
  }
  ._1vgo8kge5 {
    margin-bottom: var(--_1v1ql6o8);
  }
  ._1vgo8kge9 {
    margin-bottom: 0;
  }
  ._1vgo8kged {
    margin-right: var(--_1v1ql6o0);
  }
  ._1vgo8kgeh {
    margin-right: var(--_1v1ql6o1);
  }
  ._1vgo8kgel {
    margin-right: var(--_1v1ql6o2);
  }
  ._1vgo8kgep {
    margin-right: var(--_1v1ql6o3);
  }
  ._1vgo8kget {
    margin-right: var(--_1v1ql6o4);
  }
  ._1vgo8kgex {
    margin-right: var(--_1v1ql6o5);
  }
  ._1vgo8kgf1 {
    margin-right: var(--_1v1ql6o6);
  }
  ._1vgo8kgf5 {
    margin-right: var(--_1v1ql6o7);
  }
  ._1vgo8kgf9 {
    margin-right: var(--_1v1ql6o8);
  }
  ._1vgo8kgfd {
    margin-right: 0;
  }
  ._1vgo8kgfh {
    margin-left: var(--_1v1ql6o0);
  }
  ._1vgo8kgfl {
    margin-left: var(--_1v1ql6o1);
  }
  ._1vgo8kgfp {
    margin-left: var(--_1v1ql6o2);
  }
  ._1vgo8kgft {
    margin-left: var(--_1v1ql6o3);
  }
  ._1vgo8kgfx {
    margin-left: var(--_1v1ql6o4);
  }
  ._1vgo8kgg1 {
    margin-left: var(--_1v1ql6o5);
  }
  ._1vgo8kgg5 {
    margin-left: var(--_1v1ql6o6);
  }
  ._1vgo8kgg9 {
    margin-left: var(--_1v1ql6o7);
  }
  ._1vgo8kggd {
    margin-left: var(--_1v1ql6o8);
  }
  ._1vgo8kggh {
    margin-left: 0;
  }
  ._1vgo8kggl {
    align-items: flex-start;
  }
  ._1vgo8kggp {
    align-items: center;
  }
  ._1vgo8kggt {
    align-items: flex-end;
  }
  ._1vgo8kggx {
    justify-content: flex-start;
  }
  ._1vgo8kgh1 {
    justify-content: center;
  }
  ._1vgo8kgh5 {
    justify-content: flex-end;
  }
  ._1vgo8kgh9 {
    justify-content: space-between;
  }
  ._1vgo8kghd {
    flex-direction: row;
  }
  ._1vgo8kghh {
    flex-direction: row-reverse;
  }
  ._1vgo8kghl {
    flex-direction: column;
  }
  ._1vgo8kghp {
    flex-direction: column-reverse;
  }
  ._1vgo8kght {
    flex-wrap: wrap;
  }
  ._1vgo8kghx {
    flex-wrap: nowrap;
  }
  ._1vgo8kgi1 {
    flex-shrink: 0;
  }
  ._1vgo8kgi5 {
    flex-grow: 0;
  }
  ._1vgo8kgi9 {
    flex-grow: 1;
  }
  ._1vgo8kgid {
    text-align: left;
  }
  ._1vgo8kgih {
    text-align: center;
  }
  ._1vgo8kgil {
    text-align: right;
  }
}
@media screen and (min-width: 992px) {
  ._1vgo8kg4y {
    display: none;
  }
  ._1vgo8kg52 {
    display: block;
  }
  ._1vgo8kg56 {
    display: inline;
  }
  ._1vgo8kg5a {
    display: inline-block;
  }
  ._1vgo8kg5e {
    display: flex;
  }
  ._1vgo8kg5i {
    position: relative;
  }
  ._1vgo8kg5m {
    position: absolute;
  }
  ._1vgo8kg5q {
    position: fixed;
  }
  ._1vgo8kg5u {
    position: sticky;
  }
  ._1vgo8kg5y {
    border-radius: 0;
  }
  ._1vgo8kg62 {
    border-radius: 9999px;
  }
  ._1vgo8kg66 {
    border-radius: var(--_1v1ql6ob);
  }
  ._1vgo8kg6a {
    border-radius: var(--_1v1ql6oc);
  }
  ._1vgo8kg6e {
    border-radius: var(--_1v1ql6od);
  }
  ._1vgo8kg6i {
    border-radius: var(--_1v1ql6oe);
  }
  ._1vgo8kg6m {
    gap: var(--_1v1ql6o0);
  }
  ._1vgo8kg6q {
    gap: var(--_1v1ql6o1);
  }
  ._1vgo8kg6u {
    gap: var(--_1v1ql6o2);
  }
  ._1vgo8kg6y {
    gap: var(--_1v1ql6o3);
  }
  ._1vgo8kg72 {
    gap: var(--_1v1ql6o4);
  }
  ._1vgo8kg76 {
    gap: var(--_1v1ql6o5);
  }
  ._1vgo8kg7a {
    gap: var(--_1v1ql6o6);
  }
  ._1vgo8kg7e {
    gap: var(--_1v1ql6o7);
  }
  ._1vgo8kg7i {
    gap: var(--_1v1ql6o8);
  }
  ._1vgo8kg7m {
    gap: 0;
  }
  ._1vgo8kg7q {
    padding-top: var(--_1v1ql6o0);
  }
  ._1vgo8kg7u {
    padding-top: var(--_1v1ql6o1);
  }
  ._1vgo8kg7y {
    padding-top: var(--_1v1ql6o2);
  }
  ._1vgo8kg82 {
    padding-top: var(--_1v1ql6o3);
  }
  ._1vgo8kg86 {
    padding-top: var(--_1v1ql6o4);
  }
  ._1vgo8kg8a {
    padding-top: var(--_1v1ql6o5);
  }
  ._1vgo8kg8e {
    padding-top: var(--_1v1ql6o6);
  }
  ._1vgo8kg8i {
    padding-top: var(--_1v1ql6o7);
  }
  ._1vgo8kg8m {
    padding-top: var(--_1v1ql6o8);
  }
  ._1vgo8kg8q {
    padding-top: 0;
  }
  ._1vgo8kg8u {
    padding-bottom: var(--_1v1ql6o0);
  }
  ._1vgo8kg8y {
    padding-bottom: var(--_1v1ql6o1);
  }
  ._1vgo8kg92 {
    padding-bottom: var(--_1v1ql6o2);
  }
  ._1vgo8kg96 {
    padding-bottom: var(--_1v1ql6o3);
  }
  ._1vgo8kg9a {
    padding-bottom: var(--_1v1ql6o4);
  }
  ._1vgo8kg9e {
    padding-bottom: var(--_1v1ql6o5);
  }
  ._1vgo8kg9i {
    padding-bottom: var(--_1v1ql6o6);
  }
  ._1vgo8kg9m {
    padding-bottom: var(--_1v1ql6o7);
  }
  ._1vgo8kg9q {
    padding-bottom: var(--_1v1ql6o8);
  }
  ._1vgo8kg9u {
    padding-bottom: 0;
  }
  ._1vgo8kg9y {
    padding-right: var(--_1v1ql6o0);
  }
  ._1vgo8kga2 {
    padding-right: var(--_1v1ql6o1);
  }
  ._1vgo8kga6 {
    padding-right: var(--_1v1ql6o2);
  }
  ._1vgo8kgaa {
    padding-right: var(--_1v1ql6o3);
  }
  ._1vgo8kgae {
    padding-right: var(--_1v1ql6o4);
  }
  ._1vgo8kgai {
    padding-right: var(--_1v1ql6o5);
  }
  ._1vgo8kgam {
    padding-right: var(--_1v1ql6o6);
  }
  ._1vgo8kgaq {
    padding-right: var(--_1v1ql6o7);
  }
  ._1vgo8kgau {
    padding-right: var(--_1v1ql6o8);
  }
  ._1vgo8kgay {
    padding-right: 0;
  }
  ._1vgo8kgb2 {
    padding-left: var(--_1v1ql6o0);
  }
  ._1vgo8kgb6 {
    padding-left: var(--_1v1ql6o1);
  }
  ._1vgo8kgba {
    padding-left: var(--_1v1ql6o2);
  }
  ._1vgo8kgbe {
    padding-left: var(--_1v1ql6o3);
  }
  ._1vgo8kgbi {
    padding-left: var(--_1v1ql6o4);
  }
  ._1vgo8kgbm {
    padding-left: var(--_1v1ql6o5);
  }
  ._1vgo8kgbq {
    padding-left: var(--_1v1ql6o6);
  }
  ._1vgo8kgbu {
    padding-left: var(--_1v1ql6o7);
  }
  ._1vgo8kgby {
    padding-left: var(--_1v1ql6o8);
  }
  ._1vgo8kgc2 {
    padding-left: 0;
  }
  ._1vgo8kgc6 {
    margin-top: var(--_1v1ql6o0);
  }
  ._1vgo8kgca {
    margin-top: var(--_1v1ql6o1);
  }
  ._1vgo8kgce {
    margin-top: var(--_1v1ql6o2);
  }
  ._1vgo8kgci {
    margin-top: var(--_1v1ql6o3);
  }
  ._1vgo8kgcm {
    margin-top: var(--_1v1ql6o4);
  }
  ._1vgo8kgcq {
    margin-top: var(--_1v1ql6o5);
  }
  ._1vgo8kgcu {
    margin-top: var(--_1v1ql6o6);
  }
  ._1vgo8kgcy {
    margin-top: var(--_1v1ql6o7);
  }
  ._1vgo8kgd2 {
    margin-top: var(--_1v1ql6o8);
  }
  ._1vgo8kgd6 {
    margin-top: 0;
  }
  ._1vgo8kgda {
    margin-bottom: var(--_1v1ql6o0);
  }
  ._1vgo8kgde {
    margin-bottom: var(--_1v1ql6o1);
  }
  ._1vgo8kgdi {
    margin-bottom: var(--_1v1ql6o2);
  }
  ._1vgo8kgdm {
    margin-bottom: var(--_1v1ql6o3);
  }
  ._1vgo8kgdq {
    margin-bottom: var(--_1v1ql6o4);
  }
  ._1vgo8kgdu {
    margin-bottom: var(--_1v1ql6o5);
  }
  ._1vgo8kgdy {
    margin-bottom: var(--_1v1ql6o6);
  }
  ._1vgo8kge2 {
    margin-bottom: var(--_1v1ql6o7);
  }
  ._1vgo8kge6 {
    margin-bottom: var(--_1v1ql6o8);
  }
  ._1vgo8kgea {
    margin-bottom: 0;
  }
  ._1vgo8kgee {
    margin-right: var(--_1v1ql6o0);
  }
  ._1vgo8kgei {
    margin-right: var(--_1v1ql6o1);
  }
  ._1vgo8kgem {
    margin-right: var(--_1v1ql6o2);
  }
  ._1vgo8kgeq {
    margin-right: var(--_1v1ql6o3);
  }
  ._1vgo8kgeu {
    margin-right: var(--_1v1ql6o4);
  }
  ._1vgo8kgey {
    margin-right: var(--_1v1ql6o5);
  }
  ._1vgo8kgf2 {
    margin-right: var(--_1v1ql6o6);
  }
  ._1vgo8kgf6 {
    margin-right: var(--_1v1ql6o7);
  }
  ._1vgo8kgfa {
    margin-right: var(--_1v1ql6o8);
  }
  ._1vgo8kgfe {
    margin-right: 0;
  }
  ._1vgo8kgfi {
    margin-left: var(--_1v1ql6o0);
  }
  ._1vgo8kgfm {
    margin-left: var(--_1v1ql6o1);
  }
  ._1vgo8kgfq {
    margin-left: var(--_1v1ql6o2);
  }
  ._1vgo8kgfu {
    margin-left: var(--_1v1ql6o3);
  }
  ._1vgo8kgfy {
    margin-left: var(--_1v1ql6o4);
  }
  ._1vgo8kgg2 {
    margin-left: var(--_1v1ql6o5);
  }
  ._1vgo8kgg6 {
    margin-left: var(--_1v1ql6o6);
  }
  ._1vgo8kgga {
    margin-left: var(--_1v1ql6o7);
  }
  ._1vgo8kgge {
    margin-left: var(--_1v1ql6o8);
  }
  ._1vgo8kggi {
    margin-left: 0;
  }
  ._1vgo8kggm {
    align-items: flex-start;
  }
  ._1vgo8kggq {
    align-items: center;
  }
  ._1vgo8kggu {
    align-items: flex-end;
  }
  ._1vgo8kggy {
    justify-content: flex-start;
  }
  ._1vgo8kgh2 {
    justify-content: center;
  }
  ._1vgo8kgh6 {
    justify-content: flex-end;
  }
  ._1vgo8kgha {
    justify-content: space-between;
  }
  ._1vgo8kghe {
    flex-direction: row;
  }
  ._1vgo8kghi {
    flex-direction: row-reverse;
  }
  ._1vgo8kghm {
    flex-direction: column;
  }
  ._1vgo8kghq {
    flex-direction: column-reverse;
  }
  ._1vgo8kghu {
    flex-wrap: wrap;
  }
  ._1vgo8kghy {
    flex-wrap: nowrap;
  }
  ._1vgo8kgi2 {
    flex-shrink: 0;
  }
  ._1vgo8kgi6 {
    flex-grow: 0;
  }
  ._1vgo8kgia {
    flex-grow: 1;
  }
  ._1vgo8kgie {
    text-align: left;
  }
  ._1vgo8kgii {
    text-align: center;
  }
  ._1vgo8kgim {
    text-align: right;
  }
}
@media screen and (min-width: 1200px) {
  ._1vgo8kg4z {
    display: none;
  }
  ._1vgo8kg53 {
    display: block;
  }
  ._1vgo8kg57 {
    display: inline;
  }
  ._1vgo8kg5b {
    display: inline-block;
  }
  ._1vgo8kg5f {
    display: flex;
  }
  ._1vgo8kg5j {
    position: relative;
  }
  ._1vgo8kg5n {
    position: absolute;
  }
  ._1vgo8kg5r {
    position: fixed;
  }
  ._1vgo8kg5v {
    position: sticky;
  }
  ._1vgo8kg5z {
    border-radius: 0;
  }
  ._1vgo8kg63 {
    border-radius: 9999px;
  }
  ._1vgo8kg67 {
    border-radius: var(--_1v1ql6ob);
  }
  ._1vgo8kg6b {
    border-radius: var(--_1v1ql6oc);
  }
  ._1vgo8kg6f {
    border-radius: var(--_1v1ql6od);
  }
  ._1vgo8kg6j {
    border-radius: var(--_1v1ql6oe);
  }
  ._1vgo8kg6n {
    gap: var(--_1v1ql6o0);
  }
  ._1vgo8kg6r {
    gap: var(--_1v1ql6o1);
  }
  ._1vgo8kg6v {
    gap: var(--_1v1ql6o2);
  }
  ._1vgo8kg6z {
    gap: var(--_1v1ql6o3);
  }
  ._1vgo8kg73 {
    gap: var(--_1v1ql6o4);
  }
  ._1vgo8kg77 {
    gap: var(--_1v1ql6o5);
  }
  ._1vgo8kg7b {
    gap: var(--_1v1ql6o6);
  }
  ._1vgo8kg7f {
    gap: var(--_1v1ql6o7);
  }
  ._1vgo8kg7j {
    gap: var(--_1v1ql6o8);
  }
  ._1vgo8kg7n {
    gap: 0;
  }
  ._1vgo8kg7r {
    padding-top: var(--_1v1ql6o0);
  }
  ._1vgo8kg7v {
    padding-top: var(--_1v1ql6o1);
  }
  ._1vgo8kg7z {
    padding-top: var(--_1v1ql6o2);
  }
  ._1vgo8kg83 {
    padding-top: var(--_1v1ql6o3);
  }
  ._1vgo8kg87 {
    padding-top: var(--_1v1ql6o4);
  }
  ._1vgo8kg8b {
    padding-top: var(--_1v1ql6o5);
  }
  ._1vgo8kg8f {
    padding-top: var(--_1v1ql6o6);
  }
  ._1vgo8kg8j {
    padding-top: var(--_1v1ql6o7);
  }
  ._1vgo8kg8n {
    padding-top: var(--_1v1ql6o8);
  }
  ._1vgo8kg8r {
    padding-top: 0;
  }
  ._1vgo8kg8v {
    padding-bottom: var(--_1v1ql6o0);
  }
  ._1vgo8kg8z {
    padding-bottom: var(--_1v1ql6o1);
  }
  ._1vgo8kg93 {
    padding-bottom: var(--_1v1ql6o2);
  }
  ._1vgo8kg97 {
    padding-bottom: var(--_1v1ql6o3);
  }
  ._1vgo8kg9b {
    padding-bottom: var(--_1v1ql6o4);
  }
  ._1vgo8kg9f {
    padding-bottom: var(--_1v1ql6o5);
  }
  ._1vgo8kg9j {
    padding-bottom: var(--_1v1ql6o6);
  }
  ._1vgo8kg9n {
    padding-bottom: var(--_1v1ql6o7);
  }
  ._1vgo8kg9r {
    padding-bottom: var(--_1v1ql6o8);
  }
  ._1vgo8kg9v {
    padding-bottom: 0;
  }
  ._1vgo8kg9z {
    padding-right: var(--_1v1ql6o0);
  }
  ._1vgo8kga3 {
    padding-right: var(--_1v1ql6o1);
  }
  ._1vgo8kga7 {
    padding-right: var(--_1v1ql6o2);
  }
  ._1vgo8kgab {
    padding-right: var(--_1v1ql6o3);
  }
  ._1vgo8kgaf {
    padding-right: var(--_1v1ql6o4);
  }
  ._1vgo8kgaj {
    padding-right: var(--_1v1ql6o5);
  }
  ._1vgo8kgan {
    padding-right: var(--_1v1ql6o6);
  }
  ._1vgo8kgar {
    padding-right: var(--_1v1ql6o7);
  }
  ._1vgo8kgav {
    padding-right: var(--_1v1ql6o8);
  }
  ._1vgo8kgaz {
    padding-right: 0;
  }
  ._1vgo8kgb3 {
    padding-left: var(--_1v1ql6o0);
  }
  ._1vgo8kgb7 {
    padding-left: var(--_1v1ql6o1);
  }
  ._1vgo8kgbb {
    padding-left: var(--_1v1ql6o2);
  }
  ._1vgo8kgbf {
    padding-left: var(--_1v1ql6o3);
  }
  ._1vgo8kgbj {
    padding-left: var(--_1v1ql6o4);
  }
  ._1vgo8kgbn {
    padding-left: var(--_1v1ql6o5);
  }
  ._1vgo8kgbr {
    padding-left: var(--_1v1ql6o6);
  }
  ._1vgo8kgbv {
    padding-left: var(--_1v1ql6o7);
  }
  ._1vgo8kgbz {
    padding-left: var(--_1v1ql6o8);
  }
  ._1vgo8kgc3 {
    padding-left: 0;
  }
  ._1vgo8kgc7 {
    margin-top: var(--_1v1ql6o0);
  }
  ._1vgo8kgcb {
    margin-top: var(--_1v1ql6o1);
  }
  ._1vgo8kgcf {
    margin-top: var(--_1v1ql6o2);
  }
  ._1vgo8kgcj {
    margin-top: var(--_1v1ql6o3);
  }
  ._1vgo8kgcn {
    margin-top: var(--_1v1ql6o4);
  }
  ._1vgo8kgcr {
    margin-top: var(--_1v1ql6o5);
  }
  ._1vgo8kgcv {
    margin-top: var(--_1v1ql6o6);
  }
  ._1vgo8kgcz {
    margin-top: var(--_1v1ql6o7);
  }
  ._1vgo8kgd3 {
    margin-top: var(--_1v1ql6o8);
  }
  ._1vgo8kgd7 {
    margin-top: 0;
  }
  ._1vgo8kgdb {
    margin-bottom: var(--_1v1ql6o0);
  }
  ._1vgo8kgdf {
    margin-bottom: var(--_1v1ql6o1);
  }
  ._1vgo8kgdj {
    margin-bottom: var(--_1v1ql6o2);
  }
  ._1vgo8kgdn {
    margin-bottom: var(--_1v1ql6o3);
  }
  ._1vgo8kgdr {
    margin-bottom: var(--_1v1ql6o4);
  }
  ._1vgo8kgdv {
    margin-bottom: var(--_1v1ql6o5);
  }
  ._1vgo8kgdz {
    margin-bottom: var(--_1v1ql6o6);
  }
  ._1vgo8kge3 {
    margin-bottom: var(--_1v1ql6o7);
  }
  ._1vgo8kge7 {
    margin-bottom: var(--_1v1ql6o8);
  }
  ._1vgo8kgeb {
    margin-bottom: 0;
  }
  ._1vgo8kgef {
    margin-right: var(--_1v1ql6o0);
  }
  ._1vgo8kgej {
    margin-right: var(--_1v1ql6o1);
  }
  ._1vgo8kgen {
    margin-right: var(--_1v1ql6o2);
  }
  ._1vgo8kger {
    margin-right: var(--_1v1ql6o3);
  }
  ._1vgo8kgev {
    margin-right: var(--_1v1ql6o4);
  }
  ._1vgo8kgez {
    margin-right: var(--_1v1ql6o5);
  }
  ._1vgo8kgf3 {
    margin-right: var(--_1v1ql6o6);
  }
  ._1vgo8kgf7 {
    margin-right: var(--_1v1ql6o7);
  }
  ._1vgo8kgfb {
    margin-right: var(--_1v1ql6o8);
  }
  ._1vgo8kgff {
    margin-right: 0;
  }
  ._1vgo8kgfj {
    margin-left: var(--_1v1ql6o0);
  }
  ._1vgo8kgfn {
    margin-left: var(--_1v1ql6o1);
  }
  ._1vgo8kgfr {
    margin-left: var(--_1v1ql6o2);
  }
  ._1vgo8kgfv {
    margin-left: var(--_1v1ql6o3);
  }
  ._1vgo8kgfz {
    margin-left: var(--_1v1ql6o4);
  }
  ._1vgo8kgg3 {
    margin-left: var(--_1v1ql6o5);
  }
  ._1vgo8kgg7 {
    margin-left: var(--_1v1ql6o6);
  }
  ._1vgo8kggb {
    margin-left: var(--_1v1ql6o7);
  }
  ._1vgo8kggf {
    margin-left: var(--_1v1ql6o8);
  }
  ._1vgo8kggj {
    margin-left: 0;
  }
  ._1vgo8kggn {
    align-items: flex-start;
  }
  ._1vgo8kggr {
    align-items: center;
  }
  ._1vgo8kggv {
    align-items: flex-end;
  }
  ._1vgo8kggz {
    justify-content: flex-start;
  }
  ._1vgo8kgh3 {
    justify-content: center;
  }
  ._1vgo8kgh7 {
    justify-content: flex-end;
  }
  ._1vgo8kghb {
    justify-content: space-between;
  }
  ._1vgo8kghf {
    flex-direction: row;
  }
  ._1vgo8kghj {
    flex-direction: row-reverse;
  }
  ._1vgo8kghn {
    flex-direction: column;
  }
  ._1vgo8kghr {
    flex-direction: column-reverse;
  }
  ._1vgo8kghv {
    flex-wrap: wrap;
  }
  ._1vgo8kghz {
    flex-wrap: nowrap;
  }
  ._1vgo8kgi3 {
    flex-shrink: 0;
  }
  ._1vgo8kgi7 {
    flex-grow: 0;
  }
  ._1vgo8kgib {
    flex-grow: 1;
  }
  ._1vgo8kgif {
    text-align: left;
  }
  ._1vgo8kgij {
    text-align: center;
  }
  ._1vgo8kgin {
    text-align: right;
  }
}
.xf3gbt0 {
  --_1v1ql6o0: 24px;
  --_1v1ql6o1: 8px;
  --_1v1ql6o2: 12px;
  --_1v1ql6o3: 16px;
  --_1v1ql6o4: 24px;
  --_1v1ql6o5: 32px;
  --_1v1ql6o6: 48px;
  --_1v1ql6o7: 64px;
  --_1v1ql6o8: 96px;
  --_1v1ql6o9: 48px;
  --_1v1ql6oa: 4px;
  --_1v1ql6ob: 4px;
  --_1v1ql6oc: 8px;
  --_1v1ql6od: 16px;
  --_1v1ql6oe: 24px;
  --_1v1ql6of: #e60278;
  --_1v1ql6og: #f8b1dc;
  --_1v1ql6oh: #fdc221;
  --_1v1ql6oi: #fee384;
  --_1v1ql6oj: #b91e1e;
  --_1v1ql6ok: #fb999a;
  --_1v1ql6ol: #838fa5;
  --_1v1ql6om: rgba(153, 191, 247, 0.7);
  --_1v1ql6on: #1e47a9;
  --_1v1ql6oo: #99bff7;
  --_1v1ql6op: #1d559d;
  --_1v1ql6oq: #98c9f1;
  --_1v1ql6or: #2e3849;
  --_1v1ql6ot: #eaecf1;
  --_1v1ql6os: #fff;
  --_1v1ql6ou: #12784f;
  --_1v1ql6ov: #8bdec5;
  --_1v1ql6ow: #7f35a9;
  --_1v1ql6ox: #e1b2f5;
  --_1v1ql6oy: 2px;
  --_1v1ql6oz: 4px;
  --_1v1ql6o10: 6px;
  --_1v1ql6o11: 400px;
  --_1v1ql6o12: 660px;
  --_1v1ql6o13: 940px;
  --_1v1ql6o14: 1280px;
  --_1v1ql6o15: #e60278;
  --_1v1ql6o16: #f8b1dc;
  --_1v1ql6o17: #723d02;
  --_1v1ql6o18: #fee384;
  --_1v1ql6o19: #b91e1e;
  --_1v1ql6o1a: #fb999a;
  --_1v1ql6o1b: #1e47a9;
  --_1v1ql6o1c: #99bff7;
  --_1v1ql6o1d: #1d559d;
  --_1v1ql6o1e: #98c9f1;
  --_1v1ql6o1f: #2e3849;
  --_1v1ql6o1h: #fff;
  --_1v1ql6o1g: #2e3849;
  --_1v1ql6o1i: #5b2084;
  --_1v1ql6o1j: #f0d6fa;
  --_1v1ql6o1k: #2e3849;
  --_1v1ql6o1l: #fff;
  --_1v1ql6o1m: #12784f;
  --_1v1ql6o1n: #8bdec5;
  --_1v1ql6o1o: #7f35a9;
  --_1v1ql6o1p: #e1b2f5;
  --_1v1ql6o1q: #e60278;
  --_1v1ql6o1r: #5a6881;
  --_1v1ql6o1s: hsla(0, 0%, 100%, 0.65);
  --_1v1ql6o1t: #fff;
  --_1v1ql6o1u: #1c2330;
  --_1v1ql6o1v: #051a49;
  --_1v1ql6o1w: #e60278;
  --_1v1ql6o1x: #cd026b;
  --_1v1ql6o1y: #fd0585;
  --_1v1ql6o1z: #feeffa;
  --_1v1ql6o20: #fdd7f3;
  --_1v1ql6o21: #fde3f6;
  --_1v1ql6o22: #fdc221;
  --_1v1ql6o23: #fef8de;
  --_1v1ql6o24: #b91e1e;
  --_1v1ql6o25: #a31a1a;
  --_1v1ql6o26: #db1616;
  --_1v1ql6o27: #ffe3e2;
  --_1v1ql6o28: #fef3f3;
  --_1v1ql6o29: #fcdbdb;
  --_1v1ql6o2a: #fde7e7;
  --_1v1ql6o2b: #1e47a9;
  --_1v1ql6o2c: #1a3e93;
  --_1v1ql6o2d: #2455c9;
  --_1v1ql6o2e: #f0f7fe;
  --_1v1ql6o2f: #d8eafc;
  --_1v1ql6o2g: #e4f1fd;
  --_1v1ql6o2h: #1d559d;
  --_1v1ql6o2i: #e3f2fb;
  --_1v1ql6o2j: #2e3849;
  --_1v1ql6o2k: #242c39;
  --_1v1ql6o2l: #384459;
  --_1v1ql6o2m: #f3f5f7;
  --_1v1ql6o2n: #f3f5f7;
  --_1v1ql6o2o: #e4e8ed;
  --_1v1ql6o2p: #ebeff2;
  --_1v1ql6o2q: #12784f;
  --_1v1ql6o2r: #e2f7f1;
  --_1v1ql6o2s: #7f35a9;
  --_1v1ql6o2t: #f9ebfd;
  --_1v1ql6o2u: #fff;
  --_1v1ql6o2v: #1c2330;
  --_1v1ql6o2w: SeekSans, "SeekSans Fallback", Arial, Tahoma, sans-serif;
  --_1v1ql6o2x: 783;
  --_1v1ql6o2y: 1057;
  --_1v1ql6o2z: -274;
  --_1v1ql6o30: 0;
  --_1v1ql6o31: 1000;
  --_1v1ql6o3w: 18px;
  --_1v1ql6o3x: 27.094px;
  --_1v1ql6o3y: 14.094px;
  --_1v1ql6o3z: -0.3611em;
  --_1v1ql6o40: -0.3611em;
  --_1v1ql6o41: 18px;
  --_1v1ql6o42: 27.094px;
  --_1v1ql6o43: 14.094px;
  --_1v1ql6o44: -0.3611em;
  --_1v1ql6o45: -0.3611em;
  --_1v1ql6o3m: 16px;
  --_1v1ql6o3n: 24.528px;
  --_1v1ql6o3o: 12.528px;
  --_1v1ql6o3p: -0.375em;
  --_1v1ql6o3q: -0.375em;
  --_1v1ql6o3r: 16px;
  --_1v1ql6o3s: 24.528px;
  --_1v1ql6o3t: 12.528px;
  --_1v1ql6o3u: -0.375em;
  --_1v1ql6o3v: -0.375em;
  --_1v1ql6o3c: 14px;
  --_1v1ql6o3d: 20.962px;
  --_1v1ql6o3e: 10.962px;
  --_1v1ql6o3f: -0.3571em;
  --_1v1ql6o3g: -0.3571em;
  --_1v1ql6o3h: 14px;
  --_1v1ql6o3i: 20.962px;
  --_1v1ql6o3j: 10.962px;
  --_1v1ql6o3k: -0.3571em;
  --_1v1ql6o3l: -0.3571em;
  --_1v1ql6o32: 12px;
  --_1v1ql6o33: 18.396px;
  --_1v1ql6o34: 9.396px;
  --_1v1ql6o35: -0.375em;
  --_1v1ql6o36: -0.375em;
  --_1v1ql6o37: 12px;
  --_1v1ql6o38: 18.396px;
  --_1v1ql6o39: 9.396px;
  --_1v1ql6o3a: -0.375em;
  --_1v1ql6o3b: -0.375em;
  --_1v1ql6o46: 400;
  --_1v1ql6o47: 600;
  --_1v1ql6o48: 700;
  --_1v1ql6o49: 28px;
  --_1v1ql6o4a: 32.924px;
  --_1v1ql6o4b: 21.924px;
  --_1v1ql6o4c: -0.1964em;
  --_1v1ql6o4d: -0.1964em;
  --_1v1ql6o4e: 36px;
  --_1v1ql6o4f: 42.188px;
  --_1v1ql6o4g: 28.188px;
  --_1v1ql6o4h: -0.1944em;
  --_1v1ql6o4i: -0.1944em;
  --_1v1ql6o4j: 24px;
  --_1v1ql6o4k: 29.792px;
  --_1v1ql6o4l: 18.792px;
  --_1v1ql6o4m: -0.2292em;
  --_1v1ql6o4n: -0.2292em;
  --_1v1ql6o4o: 30px;
  --_1v1ql6o4p: 36.49px;
  --_1v1ql6o4q: 23.49px;
  --_1v1ql6o4r: -0.2167em;
  --_1v1ql6o4s: -0.2167em;
  --_1v1ql6o4t: 22px;
  --_1v1ql6o4u: 27.226px;
  --_1v1ql6o4v: 17.226px;
  --_1v1ql6o4w: -0.2273em;
  --_1v1ql6o4x: -0.2273em;
  --_1v1ql6o4y: 24px;
  --_1v1ql6o4z: 29.792px;
  --_1v1ql6o50: 18.792px;
  --_1v1ql6o51: -0.2292em;
  --_1v1ql6o52: -0.2292em;
  --_1v1ql6o53: 20px;
  --_1v1ql6o54: 24.66px;
  --_1v1ql6o55: 15.66px;
  --_1v1ql6o56: -0.225em;
  --_1v1ql6o57: -0.225em;
  --_1v1ql6o58: 20px;
  --_1v1ql6o59: 24.66px;
  --_1v1ql6o5a: 15.66px;
  --_1v1ql6o5b: -0.225em;
  --_1v1ql6o5c: -0.225em;
  --_1v1ql6o5d: 400;
  --_1v1ql6o5e: 600;
  --_1v1ql6o5f: underline;
  --_1v1ql6o5g: 24px;
  --_1v1ql6o5h: 20px;
  --_1v1ql6o5i: transform 0.125s ease, opacity 0.125s ease;
  --_1v1ql6o5j: transform 0.2s cubic-bezier(0.02, 1.505, 0.745, 1.235);
  --_1v1ql6o5k: scale(0.95);
  --_1v1ql6o5l:
    0 0 4px 0 rgba(28, 35, 48, 0.08), 0 4px 8px -2px rgba(28, 35, 48, 0.08);
  --_1v1ql6o5m:
    0 0 8px 0 rgba(28, 35, 48, 0.08), 0 8px 16px -4px rgba(28, 35, 48, 0.08);
  --_1v1ql6o5n:
    0 0 12px 0 rgba(28, 35, 48, 0.08), 0 12px 24px -6px rgba(28, 35, 48, 0.08);
}
.e739tz4 {
  font-size: var(--e739tz0);
  line-height: var(--e739tz1);
}
.e739tz4:before {
  content: "";
  display: table;
  margin-bottom: var(--e739tz2);
}
.e739tz4:after {
  content: "";
  display: table;
  margin-top: var(--e739tz3);
}
._1405g980 {
  font-family: var(--_1v1ql6o2w);
}
._1405g981 {
  font-weight: var(--_1v1ql6o46);
}
._1405g982 {
  font-weight: var(--_1v1ql6o47);
}
._1405g983 {
  font-weight: var(--_1v1ql6o48);
}
._1405g984 {
  --e739tz0: var(--_1v1ql6o32);
  --e739tz1: var(--_1v1ql6o33);
  --e739tz2: var(--_1v1ql6o35);
  --e739tz3: var(--_1v1ql6o36);
}
._1405g986 {
  --e739tz0: var(--_1v1ql6o3c);
  --e739tz1: var(--_1v1ql6o3d);
  --e739tz2: var(--_1v1ql6o3f);
  --e739tz3: var(--_1v1ql6o3g);
}
._1405g988 {
  --e739tz0: var(--_1v1ql6o3m);
  --e739tz1: var(--_1v1ql6o3n);
  --e739tz2: var(--_1v1ql6o3p);
  --e739tz3: var(--_1v1ql6o3q);
}
._1405g98a {
  --e739tz0: var(--_1v1ql6o3w);
  --e739tz1: var(--_1v1ql6o3x);
  --e739tz2: var(--_1v1ql6o3z);
  --e739tz3: var(--_1v1ql6o40);
}
._1405g98c {
  font-size: var(--_1v1ql6o32);
  line-height: var(--_1v1ql6o33);
}
._1405g98d {
  font-size: var(--_1v1ql6o3c);
  line-height: var(--_1v1ql6o3d);
}
._1405g98e {
  font-size: var(--_1v1ql6o3m);
  line-height: var(--_1v1ql6o3n);
}
._1405g98f {
  font-size: var(--_1v1ql6o3w);
  line-height: var(--_1v1ql6o3x);
}
._1405g98g {
  font-weight: var(--_1v1ql6o5d);
}
._1405g98h {
  font-weight: var(--_1v1ql6o5e);
}
._1405g98i {
  --e739tz0: var(--_1v1ql6o49);
  --e739tz1: var(--_1v1ql6o4a);
  --e739tz2: var(--_1v1ql6o4c);
  --e739tz3: var(--_1v1ql6o4d);
}
._1405g98k {
  --e739tz0: var(--_1v1ql6o4j);
  --e739tz1: var(--_1v1ql6o4k);
  --e739tz2: var(--_1v1ql6o4m);
  --e739tz3: var(--_1v1ql6o4n);
}
._1405g98m {
  --e739tz0: var(--_1v1ql6o4t);
  --e739tz1: var(--_1v1ql6o4u);
  --e739tz2: var(--_1v1ql6o4w);
  --e739tz3: var(--_1v1ql6o4x);
}
._1405g98o {
  --e739tz0: var(--_1v1ql6o53);
  --e739tz1: var(--_1v1ql6o54);
  --e739tz2: var(--_1v1ql6o56);
  --e739tz3: var(--_1v1ql6o57);
}
html:not(._1vgo8kg11) ._1405g9810 {
  --_1405g98q: var(--_1v1ql6o19);
  --_1405g98r: var(--_1v1ql6o17);
  --_1405g98s: var(--_1v1ql6o1d);
  --_1405g98t: var(--_1v1ql6o1o);
  --_1405g98u: var(--_1v1ql6o1m);
  --_1405g98v: var(--_1v1ql6o15);
  --_1405g98w: var(--_1v1ql6o1b);
  --_1405g98x: var(--_1v1ql6o1k);
  --_1405g98y: var(--_1v1ql6o1r);
  --_1405g98z: var(--_1v1ql6o1f);
}
html:not(._1vgo8kg11) ._1405g9811 {
  --_1405g98q: var(--_1v1ql6o1a);
  --_1405g98r: var(--_1v1ql6o18);
  --_1405g98s: var(--_1v1ql6o1e);
  --_1405g98t: var(--_1v1ql6o1p);
  --_1405g98u: var(--_1v1ql6o1n);
  --_1405g98v: var(--_1v1ql6o16);
  --_1405g98w: var(--_1v1ql6o1c);
  --_1405g98x: var(--_1v1ql6o1l);
  --_1405g98y: var(--_1v1ql6o1s);
  --_1405g98z: var(--_1v1ql6o1h);
}
html._1vgo8kg11 ._1405g9812 {
  --_1405g98q: var(--_1v1ql6o19);
  --_1405g98r: var(--_1v1ql6o17);
  --_1405g98s: var(--_1v1ql6o1d);
  --_1405g98t: var(--_1v1ql6o1o);
  --_1405g98u: var(--_1v1ql6o1m);
  --_1405g98v: var(--_1v1ql6o15);
  --_1405g98w: var(--_1v1ql6o1b);
  --_1405g98x: var(--_1v1ql6o1k);
  --_1405g98y: var(--_1v1ql6o1r);
  --_1405g98z: var(--_1v1ql6o1f);
}
html._1vgo8kg11 ._1405g9813 {
  --_1405g98q: var(--_1v1ql6o1a);
  --_1405g98r: var(--_1v1ql6o18);
  --_1405g98s: var(--_1v1ql6o1e);
  --_1405g98t: var(--_1v1ql6o1p);
  --_1405g98u: var(--_1v1ql6o1n);
  --_1405g98v: var(--_1v1ql6o16);
  --_1405g98w: var(--_1v1ql6o1c);
  --_1405g98x: var(--_1v1ql6o1l);
  --_1405g98y: var(--_1v1ql6o1s);
  --_1405g98z: var(--_1v1ql6o1h);
}
html:not(._1vgo8kg11) ._1405g9814,
html:not(._1vgo8kg11) ._1405g9815,
html:not(._1vgo8kg11) ._1405g9816,
html:not(._1vgo8kg11) ._1405g9817 {
  --_1405g98x: var(--_1405g98q);
}
html:not(._1vgo8kg11) ._1405g9818,
html:not(._1vgo8kg11) ._1405g9819 {
  --_1405g98x: var(--_1405g98r);
}
html:not(._1vgo8kg11) ._1405g981a {
  --_1405g98x: var(--_1405g98u);
}
html:not(._1vgo8kg11) ._1405g981b {
  --_1405g98x: var(--_1405g98s);
}
html:not(._1vgo8kg11) ._1405g981c {
  --_1405g98x: var(--_1405g98t);
}
html._1vgo8kg11 ._1405g981d,
html._1vgo8kg11 ._1405g981e,
html._1vgo8kg11 ._1405g981f,
html._1vgo8kg11 ._1405g981g {
  --_1405g98x: var(--_1405g98q);
}
html._1vgo8kg11 ._1405g981h,
html._1vgo8kg11 ._1405g981i {
  --_1405g98x: var(--_1405g98r);
}
html._1vgo8kg11 ._1405g981j {
  --_1405g98x: var(--_1405g98u);
}
html._1vgo8kg11 ._1405g981k {
  --_1405g98x: var(--_1405g98s);
}
html._1vgo8kg11 ._1405g981l {
  --_1405g98x: var(--_1405g98t);
}
._1405g981m {
  color: var(--_1405g98q);
}
._1405g981n {
  color: var(--_1405g98r);
}
._1405g981o {
  color: var(--_1405g98s);
}
._1405g981p {
  color: var(--_1405g98t);
}
._1405g981q {
  color: var(--_1405g98u);
}
._1405g981r {
  color: var(--_1405g98v);
}
._1405g981s {
  color: var(--_1405g98w);
}
._1405g981t {
  color: var(--_1405g98x);
}
._1405g981u {
  color: var(--_1405g98y);
}
._1405g981v {
  color: var(--_1405g98z);
}
._1405g981w {
  padding-bottom: calc((var(--_1v1ql6o9) - var(--_1v1ql6o33)) / 2);
  padding-top: calc((var(--_1v1ql6o9) - var(--_1v1ql6o33)) / 2);
}
._1405g981x {
  padding-bottom: calc((var(--_1v1ql6o9) - var(--_1v1ql6o3d)) / 2);
  padding-top: calc((var(--_1v1ql6o9) - var(--_1v1ql6o3d)) / 2);
}
._1405g981y {
  padding-bottom: calc((var(--_1v1ql6o9) - var(--_1v1ql6o3n)) / 2);
  padding-top: calc((var(--_1v1ql6o9) - var(--_1v1ql6o3n)) / 2);
}
._1405g981z {
  padding-bottom: calc((var(--_1v1ql6o9) - var(--_1v1ql6o3x)) / 2);
  padding-top: calc((var(--_1v1ql6o9) - var(--_1v1ql6o3x)) / 2);
}
@media screen and (min-width: 740px) {
  ._1405g984 {
    --e739tz0: var(--_1v1ql6o37);
    --e739tz1: var(--_1v1ql6o38);
    --e739tz2: var(--_1v1ql6o3a);
    --e739tz3: var(--_1v1ql6o3b);
  }
  ._1405g986 {
    --e739tz0: var(--_1v1ql6o3h);
    --e739tz1: var(--_1v1ql6o3i);
    --e739tz2: var(--_1v1ql6o3k);
    --e739tz3: var(--_1v1ql6o3l);
  }
  ._1405g988 {
    --e739tz0: var(--_1v1ql6o3r);
    --e739tz1: var(--_1v1ql6o3s);
    --e739tz2: var(--_1v1ql6o3u);
    --e739tz3: var(--_1v1ql6o3v);
  }
  ._1405g98a {
    --e739tz0: var(--_1v1ql6o41);
    --e739tz1: var(--_1v1ql6o42);
    --e739tz2: var(--_1v1ql6o44);
    --e739tz3: var(--_1v1ql6o45);
  }
  ._1405g98c {
    font-size: var(--_1v1ql6o37);
    line-height: var(--_1v1ql6o38);
  }
  ._1405g98d {
    font-size: var(--_1v1ql6o3h);
    line-height: var(--_1v1ql6o3i);
  }
  ._1405g98e {
    font-size: var(--_1v1ql6o3r);
    line-height: var(--_1v1ql6o3s);
  }
  ._1405g98f {
    font-size: var(--_1v1ql6o41);
    line-height: var(--_1v1ql6o42);
  }
  ._1405g98i {
    --e739tz0: var(--_1v1ql6o4e);
    --e739tz1: var(--_1v1ql6o4f);
    --e739tz2: var(--_1v1ql6o4h);
    --e739tz3: var(--_1v1ql6o4i);
  }
  ._1405g98k {
    --e739tz0: var(--_1v1ql6o4o);
    --e739tz1: var(--_1v1ql6o4p);
    --e739tz2: var(--_1v1ql6o4r);
    --e739tz3: var(--_1v1ql6o4s);
  }
  ._1405g98m {
    --e739tz0: var(--_1v1ql6o4y);
    --e739tz1: var(--_1v1ql6o4z);
    --e739tz2: var(--_1v1ql6o51);
    --e739tz3: var(--_1v1ql6o52);
  }
  ._1405g98o {
    --e739tz0: var(--_1v1ql6o58);
    --e739tz1: var(--_1v1ql6o59);
    --e739tz2: var(--_1v1ql6o5b);
    --e739tz3: var(--_1v1ql6o5c);
  }
  ._1405g981w {
    padding-bottom: calc((var(--_1v1ql6o9) - var(--_1v1ql6o38)) / 2);
    padding-top: calc((var(--_1v1ql6o9) - var(--_1v1ql6o38)) / 2);
  }
  ._1405g981x {
    padding-bottom: calc((var(--_1v1ql6o9) - var(--_1v1ql6o3i)) / 2);
    padding-top: calc((var(--_1v1ql6o9) - var(--_1v1ql6o3i)) / 2);
  }
  ._1405g981y {
    padding-bottom: calc((var(--_1v1ql6o9) - var(--_1v1ql6o3s)) / 2);
    padding-top: calc((var(--_1v1ql6o9) - var(--_1v1ql6o3s)) / 2);
  }
  ._1405g981z {
    padding-bottom: calc((var(--_1v1ql6o9) - var(--_1v1ql6o42)) / 2);
    padding-top: calc((var(--_1v1ql6o9) - var(--_1v1ql6o42)) / 2);
  }
}
._1ub3h086 {
  background: var(--_1ub3h080);
}
._1ub3h087 {
  background: var(--_1ub3h081);
}
._1ub3h088 {
  background: var(--_1ub3h082);
}
._1ub3h089 {
  background: var(--_1ub3h083);
}
._1ub3h08a {
  background: var(--_1ub3h084);
}
._1ub3h08b {
  background: var(--_1ub3h085);
}
html:not(._1vgo8kg11) ._1ub3h08c {
  --_1ub3h080: var(--_1v1ql6ow);
  --_1ub3h081: var(--_1v1ql6op);
  --_1ub3h082: var(--_1v1ql6ou);
  --_1ub3h083: var(--_1v1ql6oh);
  --_1ub3h084: var(--_1v1ql6oj);
  --_1ub3h085: var(--_1v1ql6on);
}
html:not(._1vgo8kg11) ._1ub3h08d {
  --_1ub3h080: var(--_1v1ql6ox);
  --_1ub3h081: var(--_1v1ql6oq);
  --_1ub3h082: var(--_1v1ql6ov);
  --_1ub3h083: var(--_1v1ql6oi);
  --_1ub3h084: var(--_1v1ql6ok);
  --_1ub3h085: var(--_1v1ql6oo);
}
html._1vgo8kg11 ._1ub3h08e {
  --_1ub3h080: var(--_1v1ql6ow);
  --_1ub3h081: var(--_1v1ql6op);
  --_1ub3h082: var(--_1v1ql6ou);
  --_1ub3h083: var(--_1v1ql6oh);
  --_1ub3h084: var(--_1v1ql6oj);
  --_1ub3h085: var(--_1v1ql6on);
}
html._1vgo8kg11 ._1ub3h08f {
  --_1ub3h080: var(--_1v1ql6ox);
  --_1ub3h081: var(--_1v1ql6oq);
  --_1ub3h082: var(--_1v1ql6ov);
  --_1ub3h083: var(--_1v1ql6oi);
  --_1ub3h084: var(--_1v1ql6ok);
  --_1ub3h085: var(--_1v1ql6oo);
}
._1ub3h08g {
  border-bottom-right-radius: 0 !important;
  border-top-right-radius: 0 !important;
}
._1ub3h08h {
  width: var(--_1v1ql6oe);
}
._1ub3h08i {
  width: var(--_1v1ql6oa);
}
._1rz37z40 {
  margin-bottom: -0.1em;
}
._1rz37z42 {
  overflow-wrap: break-word;
  text-overflow: ellipsis;
  white-space: nowrap;
}
._1rz37z40 ._1rz37z42 {
  padding-bottom: 0.1em;
}
@supports (display: -webkit-box) and (-webkit-line-clamp: 1) {
  ._1rz37z44 {
    display: -webkit-box;
    -webkit-line-clamp: var(--_1rz37z43);
    white-space: normal;
    -webkit-box-orient: vertical;
  }
}
,
  "main.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "main.js.LICENSE.txt": /**
 * @license React
 * react-dom-client.production.js
 *
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * react-dom.production.js
 *
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * react-jsx-runtime.production.js
 *
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * react.production.js
 *
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * scheduler.production.js
 *
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */
,
}
`;

exports[`sku-webpack-plugin > start > should start a development server 1`] = `
===================================================================
--- sourceHtml
+++ clientHtml
@@ -1,24 +1,37 @@
 <!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
     <title>
       Webpack App
     </title>
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1"
     >
     <script
       defer
       src="main.js"
     >
     </script>
     <link
       href="main.css"
       rel="stylesheet"
     >
   </head>
   <body>
+    <div>
+      <style type="text/css">
+        html,body{margin:0;padding:0;background:#fff}
+            html.sprinkles_darkMode__1vgo8kg11,html.sprinkles_darkMode__1vgo8kg11 body{color-scheme:dark;background:#1C2330}
+      </style>
+      <div class="seekJobs_seekJobs__xf3gbt0 typography_lightModeTone_light__1405g9810 typography_darkModeTone_dark__1405g9813">
+        <div class="reset_base__16poewi0 sprinkles_paddingBottom_gutter_mobile__1vgo8kg8s sprinkles_paddingTop_gutter_mobile__1vgo8kg7o sprinkles_paddingLeft_gutter_mobile__1vgo8kgb0 sprinkles_paddingRight_gutter_mobile__1vgo8kg9w sprinkles_position_relative_mobile__1vgo8kg5g sprinkles_borderRadius_large_mobile__1vgo8kg6c sprinkles_textAlign_left_mobile__1vgo8kgic sprinkles_boxShadow_borderNeutralLight_lightMode__1vgo8kg4k sprinkles_boxShadow_borderNeutral_darkMode__1vgo8kg4d typography_lightModeTone_light__1405g9810 typography_darkModeTone_dark__1405g9813 sprinkles_background_surface_lightMode__1vgo8kg34 sprinkles_background_surfaceDark_darkMode__1vgo8kg37">
+          <span class="reset_base__16poewi0 sprinkles_display_block_mobile__1vgo8kg50 typography_fontFamily__1405g980 typography_fontWeight_regular__1405g981 typography_tone_neutral__1405g981t typography_textSize_large__1405g98a capsize_capsizeStyle__e739tz4">
+            Is it working?
+          </span>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
\\ No newline at end of file
`;
